<resources>
    <string name="app_name">Epay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recharge_bill_payment"><![CDATA[Recharge & Bill Payment]]></string>
    <string name="ok">Ok</string>
    <string name="title_activity_network">NetworkActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="verifyRMN">Verify RMN</string>
    <string name="enter_mobile_no">Enter mobile no.</string>
    <string name="mobile_no">Mobile No<font color='#FF0000'>*</font></string>
    <string name="mobile_no_hint">Mobile No</string>
    <string name="unlock_using_pin">Unlock Using PIN</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="you_ll_receive_a_6_digit_otp_to_verify_next">You\'ll receive a 6 digit code \nto verify next</string>
    <string name="don_t_receive_code">Don\'t receive code</string>
    <string name="resend_otp">Resend OTP in <font color='#72110A'>%dS</font></string>
    <string name="resend_otp_title">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="name">Name<font color='#FF0000'>*</font></string>
    <string name="basic_information">Basic Information</string>
    <string name="enter_name">Enter name</string>
    <string name="mobile_no_reg">Mobile No<font color='#FF0000'>*</font></string>
    <string name="enter_mobile_no_reg">Enter Mobile No</string>
    <string name="alternate_mobile_no">Alternate Mobile No<font color='#FF0000'>*</font></string>
    <string name="enter_alternate_mobile_no">Enter Alternate Mobile No</string>
    <string name="email_id">Email ID<font color='#FF0000'>*</font></string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="address">Address<font color='#FF0000'>*</font></string>
    <string name="enter_address">Enter address</string>
    <string name="pin_code">Pin Code<font color='#FF0000'>*</font></string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="date_of_birth">Date of Birth<font color='#FF0000'>*</font></string>
    <string name="state">State<font color='#FF0000'>*</font></string>
    <string name="select_state">Select State</string>
    <string name="city_district">City/District<font color='#FF0000'>*</font></string>
    <string name="city_district_hint">City/District</string>
    <string name="area">Area<font color='#FF0000'>*</font></string>
    <string name="gender">Gender<font color='#FF0000'>*</font></string>
    <string name="gender_hint">Gender</string>
    <string name="aadhar_no">Aadhar No<font color='#FF0000'>*</font></string>
    <string name="enter_aadhar_no">Enter Aadhar No</string>
    <string name="aadhar_no_hint">Aadhar No</string>
    <string name="pan_card_no">PAN Card No<font color='#FF0000'>*</font></string>
    <string name="pan_card">PAN Card<font color='#FF0000'>*</font></string>
    <string name="enter_pan_card_no">Enter PAN Card No</string>
    <string name="select_date">Select Date</string>
    <string name="choose_file">Choose file</string>
    <string name="owner_pan_card">Owner PAN Card<font color='#FF0000'>*</font></string>
    <string name="owner_aadhaar_card_front_side">Owner Aadhaar Card (Front Side)<font color='#FF0000'>*</font></string>
    <string name="owner_aadhaar_card_back_side">Owner Aadhaar Card (Back Side)<font color='#FF0000'>*</font></string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="search">Search</string>
    <string name="city_district_msg">City/District</string>
    <string name="state_hint">State</string>
    <string name="kyc_details">KYC DETAILS</string>
    <string name="bank_details">BANK DETAILS</string>
    <string name="doc_upload">DOC UPLOAD</string>
    <string name="partner_aadhaar_card_back_side">Partner Aadhaar Card (Back side)</string>
    <string name="gst_certificate_pdf_only">GST Certificate (PDF only)</string>
    <string name="certificate_of_incorporation_pdf_only">Certificate of Incorporation (PDF only)</string>
    <string name="board_resolution_pdf_only">Board Resolution(PDF Only)</string>
    <string name="trade_license_pdf_only">Trade License(PDF Only)</string>
    <string name="user_selfi">User Selfi<font color='#FF0000'>*</font></string>
    <string name="selfi_with_company_person">Selfi with Company Person<font color='#FF0000'>*</font></string>
    <string name="video_kyc">Video KYC<font color='#FF0000'>*</font></string>
    <string name="save_amp_continue"><![CDATA[Save & Continue]]></string>
    <string name="partner_name">Partner Name</string>
    <string name="business_name">Business Name<font color='#FF0000'>*</font></string>
    <string name="business_name_title">Business Name</string>
    <string name="business_address">Business Address<font color='#FF0000'>*</font></string>
    <string name="business_address_hint">Business Address</string>
    <string name="pan_card_no_company">Pan Card No.(Company)</string>
    <string name="pan_card_no_partner_if_any">Pan Card No.(Partner, If any)</string>
    <string name="aadhar_no_partner_if_have">Aadhar No(Partner, If have)</string>
    <string name="gstin_no">GSTIN No.</string>
    <string name="business_type">Business Type<font color='#FF0000'>*</font></string>
    <string name="business_category">Business Category<font color='#FF0000'>*</font></string>
    <string name="beneficiary_name">Beneficiary Name<font color='#FF0000'>*</font></string>
    <string name="account_number">Account Number<font color='#FF0000'>*</font></string>
    <string name="confirm_account_number">Confirm Account Number<font color='#FF0000'>*</font></string>
    <string name="bank_name">Bank Name<font color='#FF0000'>*</font></string>
    <string name="ifsc_code">IFSC Code<font color='#FF0000'>*</font></string>
    <string name="employee_code_id">Employee Code/ID<font color='#FF0000'>*</font></string>
    <string name="cancelled_cheque_jpg_only">Cancelled Cheque(JPG ONLY)<font color='#FF0000'>*</font></string>
    <string name="beneficiary_name_hint">Beneficiary Name</string>
    <string name="account_number_hint">Account Number</string>
    <string name="confirm_account_number_hint">Confirm Account Number</string>
    <string name="ifsc_code_hint">IFSC Code</string>
    <string name="employee_code_id_hint">Employee Code/ID</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="choose_operator">Choose operator</string>
    <string name="capture_image">Capture Image</string>
    <string name="please_wait">Please wait...</string>
    <string name="mobile_recharge">Mobile Recharge</string>
    <string name="dth_recharge">DTH Recharge</string>
    <string name="select_operator">Select Operator</string>
    <string name="prepaid">Prepaid</string>
    <string name="browse_plans"> BROWSE PLANS </string>
    <string name="proceed">PROCEED</string>
    <string name="select_a_recharge_plan">Select a recharge plan</string>
    <string name="subscriber_id">Subscriber id</string>
    <string name="customer_info">Customer info</string>
    <string name="enter_amount">Enter amount</string>
    <string name="balance">Balance</string>
    <string name="thank_you_for_using_our_app">Thank you for using our app!</string>
    <string name="electric">Electricity</string>
    <string name="choose_state">Choose state</string>
    <string name="fetch_amount">Fetch amount</string>
    <string name="payment">Payment</string>
    <string name="transactions">transactions</string>
    <string name="dmt">DMT</string>
    <string name="load_Requests">Load Requests</string>
    <string name="wallet_ledger">Wallet Ledger</string>
    <string name="cashout_ledger">cashout Ledger</string>
    <string name="aeps">AEPS</string>
    <string name="micro_atm">Micro ATM</string>
    <string name="commissions">Commissions</string>
    <string name="bank_settle">Bank Settle</string>
    <string name="wallet_settle">Wallet Settle</string>
    <string name="complaints">Complaints</string>
    <string name="flight">Flight</string>
    <string name="train">Train</string>
    <string name="bus">Bus</string>
    <string name="success">Success</string>
    <string name="hotel">Hotel</string>
    <string name="scan"><![CDATA[Scan & Pay]]></string>
    <string name="myaccount">My Account</string>
    <string name="support">Support</string>
    <string name="likeus">Like Us</string>
    <string name="usage_terms">Usage Terms</string>
    <string name="password">Password</string>
    <string name="certificate">Certificate</string>
    <string name="logout">Log out</string>
    <string name="move_to_bank">Move to Bank</string>
    <string name="move_to_wallet">Move to wallet</string>
    <string name="ePotly">ePotly</string>
    <string name="payment_request">Payment request</string>
    <string name="banking">Banking</string>
    <string name="insurance">Insurance</string>
    <string name="postpaid">"Postpaid "</string>
    <string name="cash_withdraw">Cash Withdraw</string>
    <string name="mini_statement">Mini Statement</string>
    <string name="aadhar_pay">Aadhaar pay</string>
    <string name="financial">Financial</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash_collection">Cash Collection</string>
    <string name="matm">MATM</string>
    <string name="money_transfer">Money transfer</string>
    <string name="utility">Utility</string>
    <string name="view_more">View More</string>
    <string name="fast_tag">Fast Tag</string>
    <string name="gas">Gas</string>
    <string name="contact_details">Contact Details</string>
    <string name="contect_center">Contect Center</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_condition">\u25A1 Please read the following terms and conditions carefully before registering on, accessing, browsing, downloading or using the Big9 website located at http://big9.co.in/, and all associated sites linked to http://big9.co.in/, or the Big9 mobile application or any similar platform (hereinafter collectively, the Big9 Platform run by BDAS WEB SYS PVT LTD, having its corporate office at EB-47, 3108, Rajdanga main road, Kasba, Kolkata-700107 (hereinafter collectively, Big9 or BIG9) on any device and/or before availing any services offered by Big9 on the Big9 Platform which may include services such as recharge or bill payment, digital products, semi-closed wallet service and marketplace service or any other service that may be offered by Big9 on the Big9 Platform (hereinafter individually, and collectively, the Big9 Services).\n\n \u25A1 For the avoidance of doubt, it is clarified that these terms and conditions shall apply to all Big9 Services, whether offered by Big9 or its affiliates.</string>
    <string name="change_password">Change Password</string>
    <string name="submit">SUBMIT</string>
    <string name="reset_tpin">Reset TPIN</string>
    <string name="old_login_pin">Old Login PIN</string>
    <string name="new_login_pin">New Login PIN</string>
    <string name="confirm_login_pin">Confirm Login PIN</string>
    <string name="pancard_no_without_star">Pan Card Number</string>
    <string name="i_confirm">I CONFIRM</string>
    <string name="i_hereby_authorize_the_company_to_use_my_kyc_data_for_onboarding_on_aeps">\u25CF I hereby authorize the company to use my KYC data for onboarding on AEPS</string>
    <string name="selected_bank">Selected Bank</string>
    <string name="m_atm_transaction">M-ATM TRANSACTION</string>
    <string name="vm30">VM30</string>
    <string name="select_device_model">Select Device Model</string>
    <string name="balance_enquery">Balance Enquery</string>
    <string name="cash_withdrawal_matm">Cash Withdrawal</string>
</resources>